tests/types/errors/shift_float_rhs.mog
#!strict
i32 value = 1;
f64 amount = 2.0;
print(value << amount);
